k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-site
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mini-site.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-site
                port:
                  number: 80
